--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: web-container
     expose:
       - "3000"
+    environment:
+      - GROQ_API_KEY=${GROQ_API_KEY}
 
   ngrok:
     image: ngrok/ngrok:latest
