change to 23-alphine to save my sdd on rebuilds tested working good switch to phater build later if needed run lites now web server loads faster on my test

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,6 +1,21 @@
-FROM node:18
+# Use the slim Alpine base image
+FROM node:23-alpine
+
+# Set the working directory
 WORKDIR /app
+
+# Optional: Install bash if needed by scripts (safe to skip if not needed)
+# RUN apk add --no-cache bash
+
+# Install only production dependencies (skip devDeps)
+COPY package*.json ./
+RUN npm install --production
+
+# Copy the rest of your app
 COPY . .
-RUN npm install
+
+# Expose the port your app listens on
 EXPOSE 3000
+
+# Start the app
 CMD ["node", "server.js"]
