--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "3000"
     environment:
       - GROQ_API_KEY=${GROQ_API_KEY}
+      - MONGO_URI=${MONGO_URI}
     restart: "no"
     init: true
     healthcheck:
@@ -15,7 +16,14 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-
+  mongo:
+    image: mongo
+    container_name: mongo-db
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+      - mongo-config:/data/configdb
   cloudflared:
     image: cloudflare/cloudflared:latest
     container_name: cloudflared-tunnel
@@ -24,3 +32,6 @@ services:
         condition: service_healthy
     command: tunnel --url http://web:3000
     restart: "no"
+volumes:
+  mongo-data:
+  mongo-config:
