--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,9 @@
     "dependencies": {
       "express": "^5.1.0",
       "node-fetch": "^3.3.2",
-      "dotenv": "^16.5.0"
+      "dotenv": "^16.5.0",
+      "mongodb": "^6.16.0",
+      "mongoose": "^7.0.1"
     }
   }
   
