--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,10 @@
     "type": "module",
     "dependencies": {
       "express": "^5.1.0",
+      "express-session":"^1.18.1",
+      "connect-mongo":"^5.1.0",
       "node-fetch": "^3.3.2",
+      "bcryptjs":"^3.0.2",
       "dotenv": "^16.5.0",
       "mongodb": "^6.16.0",
       "mongoose": "^7.0.1"
