batchGroqHandler.js is a rewrite for more options and better handling

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,15 @@
-GROQ_API_KEY=you_NEED_a_key_here
-CLOUDFLARED_TOKEN=you_can_leave_this_blank
+# === SERVER SETTINGS ===
+PORT=3000
+NODE_ENV=development
+
+# === MONGODB SETTINGS ===
+# MONGO_URI=mongodb://localhost:27017/yourDatabaseName
 MONGO_URI=mongodb://mongo:27017/chatai
+
+# === SESSION SETTINGS ===
+# !! IMPORTANT: In production, this must be a long, random, unguessable string !!
+SESSION_SECRET=changemeplease
+
+# === GROQ API SETTINGS ===
+# Get your API key from GroqCloud dashboard
+GROQ_API_KEY=your-groq-api-key-here
