--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       - GROQ_API_KEY=${GROQ_API_KEY}
       - MONGO_URI=${MONGO_URI}
+      - SESSION_SECRET=${SESSION_SECRET}
     restart: "no"
     init: true
     healthcheck:
