--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,5 @@
-# === SERVER SETTINGS ===
 PORT=3000
-NODE_ENV=development
-
-# === MONGODB SETTINGS ===
-# MONGO_URI=mongodb://localhost:27017/yourDatabaseName
+NODE_ENV=production
 MONGO_URI=mongodb://mongo:27017/chatai
-
-# === SESSION SETTINGS ===
-# !! IMPORTANT: In production, this must be a long, random, unguessable string !!
 SESSION_SECRET=changemeplease
-
-# === GROQ API SETTINGS ===
-# Get your API key from GroqCloud dashboard
 GROQ_API_KEY=your-groq-api-key-here
