24-slim last commit & mongoose 8.15.0 this commit | server.js update

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,5 +10,5 @@ services:
     restart: "no"
     depends_on: []
     profiles: []
-    entrypoint: ["sh", "-c", "echo Skipping tunnel in dev mode"]
+    entrypoint: ["sh", "-c", "echo 'Skipping tunnel in dev mode, busybox is holding down the fort :)'"]
     command: []
