--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-PORT=3000
-NODE_ENV=production
 MONGO_URI=mongodb://mongo:27017/chatai
-SESSION_SECRET=changemeplease
+SESSION_SECRET=change%me%please
 GROQ_API_KEY=your-groq-api-key-here
+CLOUDFLARED_TOKEN=your-cloudflared-token-here
+NGROK_AUTHTOKEN=your-cloudflared-token-here_old-build
