fix login on PROD mode (tunnel login only)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+# These are REQUIRED (must be set and included in your .env file)
 MONGO_URI=mongodb://mongo:27017/chatai
-SESSION_SECRET=change%me%please
-GROQ_API_KEY=your-groq-api-key-here
-CLOUDFLARED_TOKEN=your-cloudflared-token-here
-NGROK_AUTHTOKEN=your-cloudflared-token-here_old-build
+SESSION_SECRET=change%me%please%%a%made%up%password%you%set%for%encryption
+GROQ_API_KEY=https://console.groq.com/keys
+
+# These are not required (feel free to leave them blank or not include them)
+CLOUDFLARED_TOKEN=https://developers.cloudflare.com/analytics/graphql-api/getting-started/authentication/api-key-auth/
+# Legacy v0.0.1 tunneling system (defunct)
+NGROK_AUTHTOKEN=https://dashboard.ngrok.com/get-started/your-authtoken
