fix login on PROD mode (tunnel login only)2 my-bad-on-commit msgs

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,9 +1,11 @@
 services:
   web:
+    restart: "no"
     healthcheck:
       disable: false
     environment:
       - NODE_ENV=development
+      - USE_HTTPS=false
 
   cloudflared:
     image: busybox
